--- a/homePage/homePage.css
+++ b/homePage/homePage.css
@@ -1,5 +1,11 @@
 html, body {
     height: 100%;
+    font-family: 'Inconsolata';
+}
+
+@font-face {
+    font-family: 'Inconsolata';
+    src: url('./Inconsolata/Inconsolata-VariableFont_wdth,wght.ttf') format('truetype');
 }
 .homeHeader{
     display: flex;
