--- a/views/homePage/homePage.ejs
+++ b/views/homePage/homePage.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel = "stylesheet" href = "homePage.css">
+    <link rel = "stylesheet" href = "/css/homePage.css">
 </head>
 <body>
     <header class = "homeHeader">
@@ -12,13 +12,13 @@
     </header>
         <nav class = "navBar"> 
             <ul class = "navLinks">
-                <li> <a href ="./homePage.html">Home</a></li>
-                <li> <a href ="../schoolsPage/schools.html">Find Schools</a></li>
-                <li> <a href ="#transferProgress">Transfer Progress</a></li>
-                <li> <a href ="#community">Community</a></li>
-                <li> <a href = "#transferResources">Transfer Resources</a></li>
-                <li> <a href = "#about">About</a></li>
-                <li> <a href = "#login">Login</a></li>
+                <li> <a href ="/homePage">Home</a></li>
+                <li> <a href ="/schoolsPage">Find Schools</a></li>
+                <li> <a href ="/transferProgress">Transfer Progress</a></li>
+                <li> <a href ="/community">Community</a></li>
+                <li> <a href = "/transferResources">Transfer Resources</a></li>
+                <li> <a href = "/about">About</a></li>
+                <li> <a href = "/loginPage">Login</a></li>
             </ul>
         </nav>
     <main>
@@ -83,6 +83,6 @@
         </footer>
     </main>
    
-    <script src = "homePage.js" defer></script>
+    <script src = "/js/homePage.js" defer></script>
 </body>
 </html>
