fixed bugs and schools page runs as intended

--- a/views/schoolsPage/schools.ejs
+++ b/views/schoolsPage/schools.ejs
@@ -10,8 +10,6 @@
 <body>
     <h1>Select a School and Major</h1>
 
-    <h1>Select a School and Major</h1>
-
     <!-- Dropdown for school selection-->
     <label for="schoolSelect">Choose a school:</label>
     <select id="schoolSelect">
@@ -28,6 +26,6 @@
     </select>
     
     <div id = "requirements"></div>
-    <script src = "schools.js" defer> </script>
+    <script src = "/js/schools.js" defer> </script>
 </body>
 </html>
