added dynamic header into pages

--- a/views/schoolsPage/schools.ejs
+++ b/views/schoolsPage/schools.ejs
@@ -8,6 +8,8 @@
     
 </head>
 <body>
+    <%- include("../partials/header") %>
+
     <h1>Select a School and Major</h1>
 
     <!-- Dropdown for school selection-->
