--- a/views/homePage/homePage.ejs
+++ b/views/homePage/homePage.ejs
@@ -7,6 +7,7 @@
     <link rel = "stylesheet" href = "/css/homePage.css">
 </head>
 <body>
+    <%- include('../partials/header') %>
     <header class = "homeHeader">
     <h1> CC Transfer</h1>
     </header>
