--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
-    <link rel = "stylesheet" href="/public/css/header.css">
-</head>
-<body>
-    <header class = "homeHeader">
-        <h1> CC Transfer</h1>
-        </header>
-            <nav class = "navBar"> 
-                <ul class = "navLinks">
-                    <li> <a href ="./homePage.html">Home</a></li>
-                    <li> <a href ="../schoolsPage/schools.html">Find Schools</a></li>
-                    <li> <a href ="#transferProgress">Transfer Progress</a></li>
-                    <li> <a href ="#community">Community</a></li>
-                    <li> <a href = "#transferResources">Transfer Resources</a></li>
-                    <li> <a href = "#about">About</a></li>
-                    <li> <a href = "#login">Login</a></li>
-                </ul>
-            </nav>
-</body>
-</html>
+<link rel = "stylesheet" href="/css/homePage.css">
+<header class = "homeHeader">
+    <h1> CC Transfer</h1>
+</header>
+    <nav class = "navBar"> 
+        <ul class = "navLinks">
+            <li> <a href ="/homePage">Home</a></li>
+            <li> <a href ="/schoolsPage">Find Schools</a></li>
+            <li> <a href ="/transferProgress">Transfer Progress</a></li>
+            <li> <a href ="/community">Community</a></li>
+            <li> <a href = "/transferResources">Transfer Resources</a></li>
+            <li> <a href = "/about">About</a></li>
+            <li> <a href = "/loginPage">Login</a></li>
+        </ul>
+    </nav>
