--- a/public/css/schools.css
+++ b/public/css/schools.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    src: url(../InterVariable.ttf);
+    src: url('/fonts/InterVariable.ttf') format('truetype');
 }
 
 body, html {
