changed css for schoolsPage, add arrow svg

--- a/views/schoolsPage/schools.ejs
+++ b/views/schoolsPage/schools.ejs
@@ -10,7 +10,7 @@
 <body>
     <%- include("../partials/header") %>
 
-    <h1>Select a School and Major</h1>
+    <h1 class = "heading">Select a School and Major</h1>
 
     <!-- Dropdown for school selection-->
     <label for="schoolSelect">Choose a school:</label>
