--- a/public/css/schools.css
+++ b/public/css/schools.css
@@ -6,4 +6,24 @@
 body, html {
     margin: 0;
     padding: 0;
+    background-color: #DDCCFF;
+}
+
+.heading {
+    display: flex;
+    justify-content: center;
+}
+label{
+    display: inline-block;
+    font-size: 18px;
+}
+select{
+    font-size:16px;
+    padding: 6px;
+    border: 2px solid #CC66FF;
+    border-radius: 8px;
+    outline: none;
+    cursor: pointer;
+    appearance: none;
+    background-size: 1em;
 }
