added loginPage to render

--- a/views/loginPage/loginPage.ejs
+++ b/views/loginPage/loginPage.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="loginPage.css">
+    <link rel="stylesheet" href="/css/loginPage.css">
 </head>
 <body>
+    <%- include("../partials/header") %>    
     <div class="mainContainer">
     <form>
         <label for = "emailInput"> Email: </label>
@@ -20,6 +21,6 @@
             <button class = "signUpButton"> Sign Up</button>
         </div>
 
-        <script src = "loginPage.js" defer> </script>
+        <script src = "/js/loginPage.js" defer> </script>
 </body>
 </html>
