fixed typo error

--- a/views/loginPage/loginPage.ejs
+++ b/views/loginPage/loginPage.ejs
@@ -13,7 +13,7 @@
         <label for = "emailInput"> Email: </label>
         <input type = "email" id = "email" name = "email" placeholder="Enter your email here" required>
         <label for = "passwordInput"> Password: </label>
-        <input type = "password" id = "email" name = "email" placeholder = "Enter your password here" required>
+        <input type = "password" id = "password" name = "password" placeholder = "Enter your password here" required>
     
         <div class="buttonHolder">
             <button type = "submit">Login</button>
