--- a/views/loginPage/loginPage.ejs
+++ b/views/loginPage/loginPage.ejs
@@ -10,9 +10,9 @@
     <%- include("../partials/header") %>    
     <div class="mainContainer">
     <form action = "/login" method="POST">
-        <label for = "emailInput"> Email: </label>
-        <input type = "email" id = "email" name = "email" placeholder="Enter your email here" required>
-        <label for = "passwordInput"> Password: </label>
+        <label for = "email"> Email: </label>
+        <input type = "email" id = "email" name = "email" placeholder="Enter your email here" autocomplete="email" required>
+        <label for = "password"> Password: </label>
         <input type = "password" id = "password" name = "password" placeholder = "Enter your password here" required>
     
         <div class="buttonHolder">
