--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
+    <link rel = "stylesheet" href="/css/register.css">
 </head>
 <body>
-    
+    Hello
 </body>
 </html>
