linked register page to home

--- a/views/homePage/homePage.ejs
+++ b/views/homePage/homePage.ejs
@@ -14,8 +14,7 @@
         <div class="hero">
             <h1>Plan Your Transfer Journey with Ease</h1>
             <h4>Find transfer requirements and track your GPA</h4>
-            <a href = "../loginPage/loginPage.html">
-            <button>Get Started</button></a> 
+            <button class = "signUpButton" type="button" onclick="window.location.href='/register'"> Sign Up Here</button>
             <a href = "../transferProgress/transferProgress.html">
             <button> Track Progress</button></a>    
         </div>
