--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -7,6 +7,24 @@
     <link rel = "stylesheet" href="/css/register.css">
 </head>
 <body>
-    Hello
+    <%- include("../partials/header") %>
+    <form action="/register" method="POST">
+        <fieldset>
+            <legend>Create Your Account</legend>
+            <label for ="username"> Username: </label>
+            <input type ="username" id = "username" name = "username" placeholder="Enter your new username here" required>
+
+            <label for = "email"> Email: </label>
+            <input type = "email" id = "email" name="email" placeholder="Enter your email here" autocomplete="email" required>
+
+            <label for = "password"> Password: </label>
+            <input for = "password" id = "password" name="password" placeholder="Enter your password here" required>
+
+            <label for ="confirmPassword"> Confirm Password: </label>
+            <input for = "password" id ="confirmPassword" name="confirmPassword" placeholder="Re-eneter your password" required>
+
+            <button type="submit">Register</button>
+        </fieldset>
+    </form>
 </body>
 </html>
