--- a/views/schoolsPage/schools.ejs
+++ b/views/schoolsPage/schools.ejs
@@ -11,7 +11,7 @@
     <%- include("../partials/header") %>
 
     <h1 class = "heading">Select a School and Major</h1>
-
+    <div class = mainContainer> 
     <!-- Dropdown for school selection-->
     <label for="schoolSelect">Choose a school:</label>
     <select id="schoolSelect">
@@ -28,6 +28,7 @@
     </select>
     
     <div id = "requirements"></div>
+    </div>
     <script src = "/js/schools.js" defer> </script>
 </body>
 </html>
