--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <%- include("../partials/header") %>
-    <form action="/register" method="POST">
+    <form action="/auth/register" method="POST">
         <fieldset>
             <legend>Create Your Account</legend>
             <label for ="username"> Username: </label>
@@ -18,10 +18,10 @@
             <input type = "email" id = "email" name="email" placeholder="Enter your email here" autocomplete="email" required>
 
             <label for = "password"> Password: </label>
-            <input for = "password" id = "password" name="password" placeholder="Enter your password here" required>
+            <input type = "password" id = "password" name="password" placeholder="Enter your password here" required>
 
             <label for ="confirmPassword"> Confirm Password: </label>
-            <input for = "password" id ="confirmPassword" name="confirmPassword" placeholder="Re-eneter your password" required>
+            <input type = "password" id ="confirmPassword" name="confirmPassword" placeholder="Re-eneter your password" required>
 
             <button type="submit">Register</button>
         </fieldset>
