--- a/views/loginPage/loginPage.ejs
+++ b/views/loginPage/loginPage.ejs
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/css/loginPage.css">
 </head>
 <body>
+
     <%- include("../partials/header") %>    
+    <main>
     <div class="mainContainer">
     <form action = "/login" method="POST">
         <label for = "email"> Email: </label>
@@ -21,8 +23,8 @@
         </div>
     </form>
     </div>
-
-    
+    </main>
+    <%- include("../partials/footer.ejs") %>
     <script src = "/js/loginPage.js" defer> </script>
 </body>
 </html>
