added basic header

--- a/views/about/aboutUs.ejs
+++ b/views/about/aboutUs.ejs
@@ -7,6 +7,10 @@
     <link rel = "stylesheet" href="/css/aboutUs.css">
 </head>
 <body>
+    <hero>
+        <h1>Helping Students Transfer with Ease </h1>
+        <p class = "subheading"> Track your progress, access resources, and get personalized recommendations for your college transfer journey </p>
+    </hero>
     
 </body>
 </html>
