--- a/public/css/header.css
+++ b/public/css/header.css
@@ -39,6 +39,7 @@ a {
     background-color: #8066FF;
     margin: 0;
     padding: 0;
+    transition-duration: 300ms;
 }
 
 .navLinks li{
@@ -51,6 +52,7 @@ a {
     text-decoration: none;
     color: black;
     display: inline-block;
+    transition-duration: 300ms;
 }
 
 .navLinks a:hover{
