--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<link rel = "stylesheet" href="/css/homePage.css">
+<link rel = "stylesheet" href="/css/header.css">
 <header class = "homeHeader">
     <h1> CC Transfer</h1>
 </header>
