added text shadow to hero

--- a/public/css/aboutUs.css
+++ b/public/css/aboutUs.css
@@ -20,9 +20,13 @@ hero{
 h1 {
     color: #CC66FF;
     box-shadow: black;
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 }
 
 .subheading{
     color:#CC66FF;
-    border: 1px solid white;
+    font-size: 18px;
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 }
