--- a/views/about/aboutUs.ejs
+++ b/views/about/aboutUs.ejs
@@ -7,10 +7,14 @@
     <link rel = "stylesheet" href="/css/aboutUs.css">
 </head>
 <body>
-    <hero>
-        <h1>Helping Students Transfer with Ease </h1>
+    <%- include("../partials/header") %>
+    <hero class = "hero">
+        <h1 class = "hero-header">Helping Students Transfer with Ease </h1>
         <p class = "subheading"> Track your progress, access resources, and get personalized recommendations for your college transfer journey </p>
     </hero>
+    <main>
+
+    </main>
     
 </body>
 </html>
