--- a/public/css/header.css
+++ b/public/css/header.css
@@ -23,6 +23,9 @@ a {
     display: flex;
     justify-content: space-around;
     background-color: #7733FF;
+    color: #CC66FF;
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 }
 
 .navBar {
@@ -56,4 +59,6 @@ a {
 
 .navLinks a:hover{
     color: #CC66FF;
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 }
