created simple our purpose section

--- a/views/about/aboutUs.ejs
+++ b/views/about/aboutUs.ejs
@@ -13,7 +13,10 @@
         <p class = "subheading"> Track your progress, access resources, and get personalized recommendations for your college transfer journey </p>
     </hero>
     <main>
-
+        <h1 class = "ourPurpose"> Our Purpose </h1>
+        <p class = "story"> CC Transfer was created to help community college students navigate their transition to universities. 
+            I personally struggled with the lack of clear transfer guidance and missed my chance at UCI due to one overlooked requirement. This site exists to ensure other students don’t face the same obstacles
+        </p>
     </main>
     
 </body>
