make cards for features next

--- a/views/about/aboutUs.ejs
+++ b/views/about/aboutUs.ejs
@@ -17,6 +17,7 @@
         <p class = "story"> CC Transfer was created to help community college students navigate their transition to universities. 
             I personally struggled with the lack of clear transfer guidance and missed my chance at UCI due to one overlooked requirement. This site exists to ensure other students don’t face the same obstacles
         </p>
+        <h2 class = "features"> Transfer Made Simple</h2>
     </main>
     
 </body>
