--- a/views/homePage/homePage.ejs
+++ b/views/homePage/homePage.ejs
@@ -20,7 +20,7 @@
         </div>
         
         <section id = "how-it-works">
-            <h2>How It Works</h2>
+            <h2>Getting Started</h2>
             <ol>
                 <li>
                     <h3>Step 1: Sign Up</h3>
