adding cards to features

--- a/views/about/aboutUs.ejs
+++ b/views/about/aboutUs.ejs
@@ -18,6 +18,11 @@
             I personally struggled with the lack of clear transfer guidance and missed my chance at UCI due to one overlooked requirement. This site exists to ensure other students don’t face the same obstacles
         </p>
         <h2 class = "features"> Transfer Made Simple</h2>
+        <div class = "cardContainer">
+            <div class = "card"><h3>Track Your Transfer Progress</h3></div>
+            <div class = "card"><h3>Access Transfer Resources</h3></div>
+            <div class = "card"><h3>Get Personalized Recommendations</h3></div>
+        </div>
     </main>
     
 </body>
