--- a/public/css/aboutUs.css
+++ b/public/css/aboutUs.css
@@ -19,7 +19,7 @@ html, body{
 
 .hero-header {
     color: #CC66FF;
-    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    text-shadow: 2px 0 15px #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
     1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 }
 
@@ -45,7 +45,7 @@ html, body{
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
     gap: 20px;
-    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    text-shadow: 2px 0 15px #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
     1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
     text-align: center;
 }
