--- a/public/css/aboutUs.css
+++ b/public/css/aboutUs.css
@@ -8,6 +8,7 @@ html, body{
     padding: 0;
     margin: 0;
     font-family: 'Inter';
+    background-color:#DDCCFF ;
 }
 
 .hero{
@@ -33,17 +34,19 @@ html, body{
 .cardContainer{
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: stretch;
     flex-wrap: wrap;
 }
 
 .card{
+    display: flex;
+    flex-direction: column;
     border: 1px solid black;
     background-color: #7733FF;
     width: 325px;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 4px rgba(0,0,0,1);
     gap: 20px;
     text-shadow: 2px 0 15px #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
     1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
