cleaned up cards and added bullet points

--- a/views/about/aboutUs.ejs
+++ b/views/about/aboutUs.ejs
@@ -19,9 +19,27 @@
         </p>
         <h2 class = "features"> Transfer Made Simple</h2>
         <div class = "cardContainer">
-            <div class = "card"><h3>Track Your Transfer Progress</h3></div>
-            <div class = "card"><h3>Access Transfer Resources</h3></div>
-            <div class = "card"><h3>Get Personalized Recommendations</h3></div>
+            <div class = "card"><h3>✅ Track Your Transfer Progress</h3>
+                <ul>
+                    <li>Stay on top of deadlines</li>
+                    <li>Keep track of required courses</li>
+                    <li>Monitor your application dates</li>
+                </ul>
+                </div>
+            <div class = "card"><h3>📚 Access Transfer Resources</h3>
+                <ul>
+                    <li>Find recommended courses and gpa requirements</li>
+                    <li>Get university transfer checklists</li>
+                    <li>Explore financial aid options</li>
+                </ul>
+            </div>
+            <div class = "card"><h3>🎯 Get Personalized Recommendations</h3>
+                <ul>
+                    <li>See recommended schools</li>
+                    <li>Discover courses based on your major</li>
+                    <li>Ask for transfer tips from other CC Transfer students</li>
+                </ul>
+            </div>
         </div>
     </main>
     
