--- a/public/css/aboutUs.css
+++ b/public/css/aboutUs.css
@@ -55,6 +55,7 @@ html, body{
 
 .card{
     display: flex;
+    justify-self: center;
     flex-direction: column;
     border: 1px solid black;
     background-color: #7733FF;
@@ -62,8 +63,20 @@ html, body{
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0,0,0,1);
-    gap: 20px;
     text-shadow: 2px 0 15px #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
     1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
     text-align: center;
+}
+
+.card ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.card ul li::before {
+    content: "•";
+    color:#CC66FF;
+    font-size: 20px;
+    left: -10px;
+    
 }
