added signup button in about page

--- a/views/about/aboutUs.ejs
+++ b/views/about/aboutUs.ejs
@@ -41,7 +41,12 @@
                 </ul>
             </div>
         </div>
+        <h2 class = "signup">Ready to Start?</h2>
+        <div class = "buttonDiv">
+            <button class = "signUpButton" type="button" onclick="window.location.href='/register'"> Click Here to Begin Your Journey!</button>
+            <a href = "../transferProgress/transferProgress.html"></a>
+        </div>
     </main>
-    
+    <%- include("../partials/footer") %>
 </body>
 </html>
