--- a/public/css/aboutUs.css
+++ b/public/css/aboutUs.css
@@ -80,3 +80,28 @@ html, body{
     left: -10px;
     
 }
+
+.signup {
+    margin-left: 20px;
+}
+
+.buttonDiv{
+    display: flex;
+    justify-content: center;
+    padding: 20px
+}
+
+button{
+    font-size: 30px;
+    border-radius: 1rem;
+    padding: 20px;
+    text-shadow: 2px 0 15px #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
+    box-shadow: 0px 2px 4px rgba(0,0,0,1);
+}
+
+.signUpButton:hover{
+    background-color: #CC66FF;
+    transition-duration: 200ms;
+
+}
