--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,12 @@
 </header>
     <nav class = "navBar"> 
         <ul class = "navLinks">
-            <li> <a href ="/homePage">Home</a></li>
+            <li> <a href ="/about">Home</a></li>
             <li> <a href ="/schoolsPage">Find Schools</a></li>
             <li> <a href ="/transferProgress">Transfer Progress</a></li>
             <li> <a href ="/community">Community</a></li>
             <li> <a href = "/transferResources">Transfer Resources</a></li>
-            <li> <a href = "/about">About</a></li>
+            <li> <a href = "/homePage">About</a></li>
             <li> <a href = "/loginPage">Login</a></li>
         </ul>
     </nav>
